Fixed the alignment of links cards for desktop view

--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -162,7 +162,7 @@
 
 .cardContainer {
   display: grid;
-  grid-template-columns: repeat(1, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   column-gap: 10px;
   row-gap: 15px;
   margin-bottom: 2em;
